chore: use set-teamsfx-env instead of set-output

--- a/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
@@ -53,15 +53,15 @@ provision:
   - uses: script # Set env for local launch
     name: Set {{../../../placeholderMappings.tabDomain}} for local launch
     with:
-      run: echo "::set-output {{../../../placeholderMappings.tabDomain}}={{domain}}"
+      run: echo "set-teamsfx-env {{../../../placeholderMappings.tabDomain}}={{domain}}"
   - uses: script # Set env for local launch
     name: Set {{../../../placeholderMappings.tabEndpoint}} for local launch
     with:
-      run: echo "::set-output {{../../../placeholderMappings.tabEndpoint}}={{endpoint}}"
+      run: echo "set-teamsfx-env {{../../../placeholderMappings.tabEndpoint}}={{endpoint}}"
   - uses: script # Set env for local launch
     name: Set {{../../../placeholderMappings.tabIndexPath}} for local launch
     with:
-      run: echo "::set-output {{../../../placeholderMappings.tabIndexPath}}=/index.html#"
+      run: echo "set-teamsfx-env {{../../../placeholderMappings.tabIndexPath}}=/index.html#"
 
   {{/tab}}
   {{#if aad}}
