--- a/packages/fx-core/templates/core/v3Migration/csharp.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/csharp.app.local.yml
@@ -55,15 +55,15 @@ configureApp:
   - uses: script # Set env for local launch
     name: Set {{placeholderMappings.tabDomain}} for local launch
     with:
-      run: echo "::set-output {{placeholderMappings.tabDomain}}=localhost:44302"
+      run: echo "set-teamsfx-env {{placeholderMappings.tabDomain}}=localhost:44302"
   - uses: script # Set env for local launch
     name: Set {{placeholderMappings.tabEndpoint}} for local launch
     with:
-      run: echo "::set-output {{placeholderMappings.tabEndpoint}}=https://localhost:44302"
+      run: echo "set-teamsfx-env {{placeholderMappings.tabEndpoint}}=https://localhost:44302"
   - uses: script # Set env for local launch
     name: Set {{placeholderMappings.tabIndexPath}} for local launch
     with:
-      run: echo "::set-output {{placeholderMappings.tabIndexPath}}=#"
+      run: echo "set-teamsfx-env {{placeholderMappings.tabIndexPath}}=#"
   {{#if activePlugins.fx-resource-aad-app-for-teams}}
   - uses: file/createOrUpdateJsonFile
     with:
@@ -80,7 +80,7 @@ configureApp:
   - uses: script # Set env for local launch
     name: Set {{placeholderMappings.botDomain}} for local launch
     with:
-      run: echo "::set-output {{placeholderMappings.botDomain}}=$\{{BOT_DOMAIN}}"
+      run: echo "set-teamsfx-env {{placeholderMappings.botDomain}}=$\{{BOT_DOMAIN}}"
 {{/if}}
 {{#if activePlugins.fx-resource-aad-app-for-teams}}
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
