docs: support list history for fix (#8255)
* docs: support list history for fix

* chore: add revier

* chore: add fix for dotnet sdk and sdk-react

--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -189,27 +189,54 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ github.event.pull_request.head.ref }}
+      - name: Add Pull Request Reviewer
+        uses: AveryCameronUofR/add-reviewer-gh-action@1.0.3
+        with: 
+          reviewers: "MuyangAmigo"
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: check feature history
         id: description
         shell: "/bin/bash {0}"
         run: |
           head=$(git describe --first-parent --abbrev=0)
           echo $head
-          history_cli=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/cli | grep "^feat")
-          echo $history_cli
-          history_toolkit=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/vscode-extension | grep "^feat")
-          echo $history_toolkit
-          echo -e '\nCLI feat commits:\n' "$history_cli" '\n\nExtension-toolkit feat commits:\n' "$history_toolkit" > feat_history.txt
-          breaking_change_cli=$(git log $head...HEAD -- packages/cli | grep -i "BREAKING CHANGE")
-          echo $breaking_change_cli
-          breaking_change_toolkit=$(git log $head...HEAD -- packages/vscode-extension| grep -i "BREAKING CHANGE")
-          echo $breaking_change_toolkit
-          echo -e '\nCLI BREAKING CHANGE:\n' "$breaking_change_cli" '\n\nExtension-toolkit BREAKING CHANGE:\n' "$breaking_change_toolkit" > breaking_change_history.txt
+          history_cli_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/cli | grep "^feat")
+          echo $history_cli_feat
+          history_toolkit_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/vscode-extension | grep "^feat")
+          echo $history_toolkit_feat
+          history_core_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/fx-core | grep "^feat")
+          echo $history_core_feat
+          history_sdk_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/sdk | grep "^feat")
+          echo $history_sdk_feat
+          history_sdk_react_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/sdk-react | grep "^feat")
+          echo $history_sdk_react_feat
+          history_dotnet_sdk_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/dotnet-sdk | grep "^feat")
+          echo $history_dotnet_sdk_feat
+          echo -e '\nFx-core feat commits:\n' "$history_core_feat" '\n\nCLI feat commits:\n' "$history_cli_feat" '\n\nExtension-toolkit feat commits:\n' "$history_toolkit_feat" '\n\nSDK feat commits:\n' "$history_sdk_feat" '\n\nSDK React feat commits:\n' "$history_sdk_react_feat" '\n\n.Net SDK feat commits:\n' "$history_dotnet_sdk_feat" '\n'> feat_history.txt
+          history_cli_fix=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/cli | grep "^fix")
+          echo $history_cli_fix
+          history_toolkit_fix=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/vscode-extension | grep "^fix")
+          echo $history_toolkit_fix
+          history_core_fix=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/fx-core | grep "^fix")
+          echo $history_core_fix
+          history_sdk_fix=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/sdk | grep "^fix")
+          echo $history_sdk_fix
+          history_sdk_react_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/sdk-react | grep "^fix")
+          echo $history_sdk_react_fix
+          history_dotnet_sdk_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/dotnet-sdk | grep "^fix")
+          echo $history_dotnet_sdk_fix
+          echo -e '\nFx-core fix commits:\n' "$history_core_fix" '\n\nCLI fix commits:\n' "$history_cli_fix" '\n\nExtension-toolkit fix commits:\n' "$history_toolkit_fix" '\n\nSDK fix commits:\n' "$history_sdk_fix"  '\n\nSDK React fix commits:\n' "$history_sdk_react_fix" '\n\n.Net SDK fix commits:\n' "$history_dotnet_sdk_fix" '\n'> fix_history.txt
       - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: 14
+      - name: lerna expect pre version
+        if: ${{ github.event.pull_request.base.ref == 'prerelease' }}
+        run: |
+          npx lerna version prerelease --preid=beta.$(date "+%Y%m%d%H") --exact --no-push --no-git-tag-version --allow-branch ${{ github.event.pull_request.head.ref }} --ignore-scripts --yes
+          npx lerna changed -l | awk '{ print $1 "\t" $2 }'> version_info.txt
       - name: lerna expect rc version
+        if: ${{ github.event.pull_request.base.ref == 'main' }}
         run: |
           npx lerna version --conventional-commits --conventional-prerelease --preid=rc --no-git-tag-version --allow-branch ${{ github.event.pull_request.head.ref }} --yes
           npx lerna changed -l | awk '{ print $1 "\t" $2 }'> version_info.txt
@@ -218,8 +245,8 @@ jobs:
         with:
           files: |
             output1=version_info.txt
-            output2=breaking_change_history.txt
-            outpot3=feat_history.txt
+            outpot2=feat_history.txt
+            output3=fix_history.txt
       - uses: riskledger/update-pr-description@v2
         with:
           body: ${{join(steps.test.outputs.*, '')}}
