--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -340,7 +340,7 @@ jobs:
           rm -f versions.json
           echo ${{steps.version-change.outputs.CHANGED}} > changed.txt
           npx lerna ls -all --json > versions.json
-          find ./packages/vscode-extension -type f -name '*.visx' -exec mv {} . \;
+          find ./packages/vscode-extension -type f -name '*.vsix' -exec mv {} . \;
           find ./packages/server/lib -type f -name '*.exe' -exec mv {} server.exe \;
 
       - name: upload release info to artifact
