--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -109,7 +109,7 @@
     "node-forge": "^1.0.0",
     "node-ts-uuid": "^1.0.8",
     "office-addin-manifest": "^1.10.4",
-    "office-addin-project": "0.6.3",
+    "office-addin-project": "^0.7.0",
     "openapi-types": "^7.2.3",
     "proper-lockfile": "^4.1.2",
     "read-package-json-fast": "^2.0.3",
