--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -65,6 +65,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "resize-observer": "1.0.4",
     "rimraf": "^3.0.2",
     "scheduler": "^0.20.2",
     "ts-jest": "^29.0.5",
