--- a/templates/scenarios/ts/workflow/.vscode/tasks.json
+++ b/templates/scenarios/ts/workflow/.vscode/tasks.json
@@ -36,6 +36,7 @@
         {
             // Start the local tunnel service to forward public URL to local port and inspect traffic.
             // See https://aka.ms/teamsfx-tasks/local-tunnel for the detailed args definitions.
+            "label": "Start local tunnel",
             "type": "teamsfx",
             "command": "debug-start-local-tunnel",
             "args": {
