--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsWebappBot/expectedResult/js.app.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsWebappBot/expectedResult/js.app.yml
@@ -1,3 +1,6 @@
+# yaml-language-server: $schema=https://developer.microsoft.com/json-schemas/teams-toolkit/teamsapp-yaml/1.0.0/yaml.schema.json
+# Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
+# Visit https://aka.ms/teamsfx-actions for details on actions
 version: 1.0.0
 
 projectId: b267bca8-d9bf-4c99-a79d-2d9d1f59f064
@@ -9,6 +12,7 @@ provision:
     with:
       name: ${{CONFIG__MANIFEST__APPNAME__SHORT}} # Teams app name
     writeToEnvironmentFile:
+      # Write the information of created resources into environment file for the specified environment variable(s).
       teamsAppId: TEAMS_APP_ID
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
@@ -36,8 +40,6 @@ provision:
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
-    writeToEnvironmentFile:
-      teamsAppId: TEAMS_APP_ID
 
 deploy:
   - uses: cli/runNpmCommand # Run npm command
@@ -67,8 +69,6 @@ publish:
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
-    writeToEnvironmentFile:
-      teamsAppId: TEAMS_APP_ID
   - uses: teamsApp/publishAppPackage # Publish the app to Teams Admin Center (https://admin.teams.microsoft.com/policies/manage-apps) for review and approval
     with:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
