chore(core): ut

--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -50,6 +50,7 @@
     "test:spfxFeature": "nyc mocha \"tests/component/feature/spfx.test.ts\"",
     "test:arm": "nyc mocha \"tests/plugins/solution/solution.arm.test.ts\"",
     "test:azureDeployImpl": "nyc mocha \"tests/component/driver/deploy/azure/AzureDeployImpl.test.ts\"",
+    "test:azureFuncDeploy": "nyc mocha \"tests/component/driver/deploy/azure/AzureFunctionDeployDriver.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"tests/**/*.ts\"",
