--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -210,7 +210,7 @@ jobs:
         id: description
         shell: "/bin/bash {0}"
         run: |
-          head=$(git describe --first-parent --abbrev=0)
+          head=${{ steps.queryBranch.outputs.git_branch_name_base }}
           echo $head
           history_cli_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/cli | grep "^feat")
           echo $history_cli_feat
