--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -189,28 +189,16 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ github.event.pull_request.head.ref }}
-      - name: Add Pull Request Reviewer
-        uses: AveryCameronUofR/add-reviewer-gh-action@1.0.3
-        with: 
-          reviewers: "MuyangAmigo"
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Query Git branch name
-        uses: petehouston/github-actions-query-branch-name@v1.2
-        id: queryBranch
-      - name: Get Git branch name only on pull request
-        if: github.event_name == 'pull_request'
-        run: |-
-          echo "GIT_BRANCH_NAME = $GIT_BRANCH_NAME"
-          echo "GIT_BRANCH_NAME_HEAD = $GIT_BRANCH_NAME_BEAD"
-          echo "GIT_BRANCH_NAME_BASE = $GIT_BRANCH_NAME_BASE"
-          echo "Branch name: ${{ steps.queryBranch.outputs.git_branch_name }}"
-          echo "Branch name: ${{ steps.queryBranch.outputs.git_branch_name_head }}"
-          echo "Branch name: ${{ steps.queryBranch.outputs.git_branch_name_base }}"
+      # - name: Add Pull Request Reviewer
+      #   uses: AveryCameronUofR/add-reviewer-gh-action@1.0.3
+      #   with: 
+      #     reviewers: "MuyangAmigo"
+      #     token: ${{ secrets.GITHUB_TOKEN }}
       - name: check feature history
         id: description
         shell: "/bin/bash {0}"
         run: |
-          head=${{ steps.queryBranch.outputs.git_branch_name_base }}
+          head=$GIT_BRANCH_NAME_BASE
           echo $head
           history_cli_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/cli | grep "^feat")
           echo $history_cli_feat
