--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -209,7 +209,7 @@ jobs:
         id: description
         shell: "/bin/bash {0}"
         run: |
-          head=origin/dev
+          head=dev
           echo $head
           history_cli_feat=$(git log --pretty=format:"%s %h" $head...HEAD -- packages/cli | grep "^feat")
           echo $history_cli_feat
