--- a/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
@@ -1,3 +1,6 @@
+# yaml-language-server: $schema=https://developer.microsoft.com/json-schemas/teams-toolkit/teamsapp-yaml/1.0.0/yaml.schema.json
+# Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
+# Visit https://aka.ms/teamsfx-actions for details on actions
 version: 1.0.0
 
 {{#config.provision}}
@@ -76,8 +79,6 @@ provision:
   - uses: teamsApp/update # # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: {{appPackagePath}} # Relative path to this file. This is the path for built zip file.
-    writeToEnvironmentFile:
-      teamsAppId: TEAMS_APP_ID
   {{else}}
   - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
@@ -92,8 +93,6 @@ provision:
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
-    writeToEnvironmentFile:
-      teamsAppId: TEAMS_APP_ID
   {{/if}}
 
   {{/teamsApp}}
