--- a/packages/fx-core/templates/core/v3Migration/spfx.app.yml
+++ b/packages/fx-core/templates/core/v3Migration/spfx.app.yml
@@ -1,7 +1,12 @@
+# Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
+# Visit https://aka.ms/teamsfx-actions for details on actions
 version: 1.0.0
+
+projectId: {{projectId}}
 
 environmentFolderPath: ./ {{~environmentFolder}}
 
+# Triggered when 'teamsfx provision' is executed
 provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
@@ -19,9 +24,8 @@ provision:
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
-    writeToEnvironmentFile:
-      teamsAppId: TEAMS_APP_ID
 
+# Triggered when 'teamsfx deploy' is executed
 deploy:
   - uses: cli/runNpmCommand
     with:
@@ -40,6 +44,7 @@ deploy:
       createAppCatalogIfNotExist: false
       packageSolutionPath: ./SPFx/config/package-solution.json
 
+# Triggered when 'teamsfx publish' is executed
 publish:
   - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
@@ -56,8 +61,6 @@ publish:
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
-    writeToEnvironmentFile:
-      teamsAppId: TEAMS_APP_ID
   - uses: teamsApp/publishAppPackage # Publish the app to Teams Admin Center (https://admin.teams.microsoft.com/policies/manage-apps) for review and approval
     with:
       appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip
