--- a/packages/manifest/package.json
+++ b/packages/manifest/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "ajv": "^8.5.0",
     "ajv-draft-04": "^1.0.0",
+    "ajv-formats": "2.1.1",
     "axios": "^0.21.2",
     "fs-extra": "^9.1.0"
   },
