chore: update cd pipeline run name

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,5 @@
 name: CD
-run-name: CD ${{ github.run_id }} on ${{ github.ref_name }} with preid ${{ inputs.preid }}
+run-name: CD-${{ github.run_id }}-${{ github.ref_name }}-${{ inputs.preid }}
 on:
   workflow_dispatch:
     inputs:
