--- a/packages/fx-core/templates/core/v3Migration/spfx.app.yml
+++ b/packages/fx-core/templates/core/v3Migration/spfx.app.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://developer.microsoft.com/json-schemas/teams-toolkit/teamsapp-yaml/1.0.0/yaml.schema.json
 # Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
 # Visit https://aka.ms/teamsfx-actions for details on actions
 version: 1.0.0
@@ -12,6 +13,7 @@ provision:
     with:
       name: {{teamsAppName}} # Teams app name
     writeToEnvironmentFile:
+      # Write the information of created resources into environment file for the specified environment variable(s).
       teamsAppId: TEAMS_APP_ID
   - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
