fix(vsc): hide decrypt secret when command is running

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -565,7 +565,7 @@
         "command": "fx-extension.addEnvironmentWithIcon",
         "title": "%teamstoolkit.commands.createEnvironment.title%",
         "icon": "$(add)",
-        "enablement": "fx-extension.isTeamsFx"
+        "enablement": "fx-extension.isTeamsFx && isWorkspaceTrusted && !fx-extension.commandLocked"
       },
       {
         "command": "fx-extension.addFeature",
