--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -136,10 +136,12 @@ jobs:
       - name: check yaml lint
         run: |
           TRAGET=origin/${{ github.event.pull_request.base.ref }}
+          echo '-------------- step 0', $TRAGET
           CHANGED=$(git diff --diff-filter=MARC $TRAGET...HEAD --name-only -- templates/scenarios)
+          echo '-------------- step1' CHANGED
           YMLTPL=$(echo $CHANGED | grep -E '.yml.tpl$')
           YML=$(echo $CHANGED| grep -E '.yml$')
-          echo $YMLTPL $YML
+          echo '-------------- step2' $YMLTPL $YML
           if [ ! -z "$YMLTPL" ]
           then
               for obj in "$YMLTPL"
